# avtools

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  audio_transcriber.py  cli.py  conversor.py  pyproject.toml  transcript_conversor.py  transcript_formatter.py  video_summarizer.py  video_to_audio.py  video_to_audio_converter.py  youtube_video_downloader.py
app/: args_parser.py  formatter.py  models.py  runner.py  utils.py
app/commands/: audio_transcriber.py  transcript_formatter.py  video_summarizer.py  video_to_audio_converter.py  youtube_video_downloader.py
app/pipelines/: diarization.py  transcription.py
audio_transcriber/: args_parser.py  converter.py  formatter.py  models.py  runner.py  utils.py
audio_transcriber/commands/: video_to_audio_converter.py  youtube_video_downloader.py
audio_transcriber/pipelines/: diarization.py  transcription.py
av_toolkit/: args_parser.py  formatter.py  runner.py
av_toolkit/commands/: video_to_audio_converter.py  youtube_video_downloader.py
av_toolkit/pipelines/: diarization.py  transcription.py
avtools/: cli.py  models.py  utils.py
avtools/commands/: audio_transcriber.py  transcript_formatter.py  video_summarizer.py  video_to_audio_converter.py  youtube_video_downloader.py
avtools/pipelines/: diarization.py  transcription.py
tests/utils/: _test_file_path.py
