[tool.poetry]
name = "audio-transcriber"
version = "0.1.0"
description = ""
authors = ["Jorge Andres Padilla <jorgeandres.padillasalgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.38.2"
optimum = "^1.17.1"
accelerate = "^0.27.2"
torch = {version = "^2.2.1+cu121", source = "pytorch-cuda"}
torchvision = {version = "^0.17.1+cu121", source = "pytorch-cuda"}
torchaudio = {version = "^2.2.1+cu121", source = "pytorch-cuda"}
ipykernel = "^6.29.3"
notebook = "^7.1.1"
pydantic = "^2.6.3"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
pyannote-audio = "^3.1.1"


[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
