[tool.poetry]
name = "av-tools"
version = "1.0.0"
description = "A collection of CLI tools for audio and video processing."
authors = ["Jorge Andres Padilla <jorgeandres.padillasalgado@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.41.2"
optimum = "^1.17.1"
accelerate = "^0.27.2"
torch = {version = "^2.3.1+cu121", source = "pytorch-cuda"}
torchvision = {version = "^0.18.1+cu121", source = "pytorch-cuda"}
torchaudio = {version = "^2.3.1+cu121", source = "pytorch-cuda"}
pydantic = "^2.7.4"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
pyannote-audio = "^3.3.1"
ruff = "^0.4.10"
pytube = "^15.0.0"
numpy = "^1.26.4"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100